<resources>
    <string name="app_name">ClinicalReports</string>
    <string name="map_key" translatable="false">AIzaSyCk2lu3_21HXySn5WHt7FWaKefOvziShrY</string>

    <!--Cadenas del login-->
    <string name="titulo">¡Bienvenido a Clinical Reports!</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="leyenda_registro">¿Aún no esta registrado? Haga click aqui</string>
    <string name="ingresar">Ingresar</string>


    <!--Cadenas del registro-->
    <string name="titulo_reg">Necesitamos algunos datos</string>
    <string name="radio_prof">Profesor</string>
    <string name="radio_alu">Alumno</string>
    <string name="conf_cont">Confirmar contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="clave_maestro">Clave de Docente</string>
    <string name="clave_alu">No. Control</string>
    <string name="registro">Registrarse</string>
    <string name="title_activity_drawer_maestro">DrawerMaestro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario Actual:</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Cerrar Sesión</string>

    <!--Cadenas del drawer de maestro-->
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Alta de Alumnos</string>
    <string name="menu_slideshow">Baja de Alumnos</string>
    <string name="menu_listarp">Listar Reportes</string>
    <!--Home-->
    <string name="titulo_home">¡Bienvenido a Clinical Reports!</string>
    <string name="desc_home">Para comenzar, haga click en el menú de la izquierda</string>
    <!--Agregar alumno-->
    <string name="titulo_crearAl">Vamos a agregar algunos alumnos:</string>
    <string name="agregar">Agregar al Grupo</string>
    <string name="info_lv">Alumnos en el grupo</string>
    <!--Eliminar alumno-->
    <string name="titulo_eliminarAl">Ahora viene lo triste... Eliminemos a un alumno</string>
    <string name="busca_alu">Buscar Alumno</string>
    <string name="baja_alu">Eliminar de Clase</string>
    <string name="nom_alu">Nombre del Alumno:</string>
    <string name="correo_Eli">Correo:</string>
    <string name="noCtrl">No. de Control:</string>
    <string name="limpia_aluE">Cancelar</string>
    <!--Listar reportes-->
    <string name="titulo_busq_prof">Ingrese el número de control de un alumno para desplegar los reportes que ha enviado</string>

    <!--Cadenas del drawer de alumno-->
    <string name="title_activity_alumno_drawer">AlumnoDrawer</string>
    <string name="menu_home_alu">Bienvenido</string>
    <string name="menu_crear_rep">Crear un reporte</string>
    <string name="menu_listar_rep_alu">Lista de Reportes</string>
    <string name="menu_editar_rep">Editar Reporte</string>
    <!--Crear reportes-->
    <string name="titulo_crear_rep">Comenzemos a crear tu reporte:</string>
    <string name="titulo_duenio">Datos del Dueño</string>
    <string name="telefono">Teléfono</string>
    <string name="titulo_animal">Datos del animal</string>
    <string name="fecha_nac_caballo">Fecha de nacimiento</string>
    <string name="diagnostico">Diagnóstico</string>
    <string name="especie">Especie</string>
    <string name="tratamiento">Tratamiento</string>
    <string name="crear_repo">Crear reporte</string>
    <!--Listar reportes alu-->
    <string name="titulo_listar_al">Aqui podras ver todos los reportes que has enviado</string>
    <string name="limpia_alu">Limpiar</string>
    <!--Editar reportes-->
    <string name="titulo_editar_alu">Editar Reportes</string>
    <string name="buscar_rep">Buscar</string>
    <string name="nombre_an">Nombre del Animal</string>
    <string name="editar">Editar</string>
    <!--Eliminar usuario-->
    <string name="nav_eliminar_usu">Eliminar Cuenta</string>
    <string name="advertencia">Si estas aqui es porque deseas eliminar de manera permanente tus datos. Si deseas continuar, da click en el boton Eliminar Datos</string>
    <string name="eliminar_dat">Eliminar Datos</string>
</resources>