<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_crear_alumno"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_eliminar_alumno"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_listar_rep"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_listarp" />
    </group>
</menu>