<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_alu"
    app:startDestination="@+id/nav_home_alu">

    <fragment
        android:id="@+id/nav_home_alu"
        android:name="com.example.clinicalreports.ui.homeAlu.HomeAluFragment"
        android:label="@string/menu_home_alu"
        tools:layout="@layout/fragment_home_alu" />

    <fragment
        android:id="@+id/nav_crear_reporte"
        android:name="com.example.clinicalreports.ui.crearRep.CrearRepFragment"
        android:label="@string/menu_crear_rep"
        tools:layout="@layout/fragment_crear_rep" />

    <fragment
        android:id="@+id/nav_listar_rep_alu"
        android:name="com.example.clinicalreports.ui.listarRepAlu.ListarRepAluFragment"
        android:label="@string/menu_listar_rep_alu"
        tools:layout="@layout/fragment_listar_rep_alu" />

    <fragment
        android:id="@+id/nav_editar_rep_alu"
        android:name="com.example.clinicalreports.ui.editarRep.EditarRepFragment"
        android:label="@string/menu_editar_rep"
        tools:layout="@layout/fragment_editar_rep" />

</navigation>