<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.clinicalreports.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_crear_alumno"
        android:name="com.example.clinicalreports.ui.agregarAlumno.AgregarAFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_agregar_alumno" />

    <fragment
        android:id="@+id/nav_eliminar_alumno"
        android:name="com.example.clinicalreports.ui.eliminarAlumno.EliminarAFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_eliminar_alumno" />

    <fragment
        android:id="@+id/nav_listar_rep"
        android:name="com.example.clinicalreports.ui.listaRep.ListarRepFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_eliminar_alumno" />
</navigation>